# expense_tracker-API

./: PullRequest.txt  README.md  db.sqlite3  pyproject.toml
config/: settings.py  urls.py
core/: admin.py  serializers.py
core/migrations/: 0001_initial.py
expenses/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
expenses/migrations/: 0001_initial.py  0002_rename_featured_prodcut_category_featured_product.py  0003_rename_featured_product_category_featured_expenditure.py  0004_accountuser.py  0005_expense_user.py  0006_alter_expense_user.py
